--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
   "name": "Spailãpad",
   "short_name": "Spailãpad",
-  "start_url": "/Spailãpad/index.html",
-  "scope": "/Spailãpad/",
+  "start_url": "./index.html",
+  "scope": "./",
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#1F51FF",
